--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.14.6",
     "@babel/node": "^7.14.7",
     "@babel/preset-env": "^7.14.7",
+    "@socket.io/admin-ui": "^0.2.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.12",
     "pug": "^3.0.2",
