--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Zoom Clone using WebRTC and Websockets",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "start": "nodemon"
   },
   "keywords": [],
   "author": "",
