--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "start": "nodemon"
+    "start": "babel-node src/server.js"
   },
   "keywords": [],
   "author": "",
